--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -4,3 +4,11 @@
   position: sticky;
   top: 0;
 }
+.btn-clear-cart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 10px auto;
+  border-radius: 4px;
+}
