--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,3 +8,14 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 45px;
 }
+.btn-proceed {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 10px auto;
+  border-radius: 4px;
+}
+.proceed-link {
+  text-decoration: none;
+}
